# aci

./: .gitignore  .vercelignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  vercel.json
.github/workflows/: ci.yml  release.yml
benchmarks/baselines/: README.md  django.json  nextjs.json
crates/aci-adapters/: Cargo.toml
crates/aci-adapters/fixtures/c/: coverage.c  syntax-error.c
crates/aci-adapters/fixtures/cpp/: coverage.cpp  syntax-error.cpp
crates/aci-adapters/fixtures/go/: coverage.go  syntax-error.go
crates/aci-adapters/fixtures/java/: coverage.java  syntax-error.java
crates/aci-adapters/fixtures/json/: package.json
crates/aci-adapters/fixtures/objective_c/: coverage.m  syntax-error.m
crates/aci-adapters/fixtures/python/: coverage.py  large.py  syntax-error.py
crates/aci-adapters/fixtures/rust/: coverage.rs  syntax-error.rs
crates/aci-adapters/fixtures/typescript/: coverage.ts  syntax-error.ts
crates/aci-adapters/src/: helpers.rs  lib.rs  tree_sitter.rs
crates/aci-adapters/src/languages/: brace.rs  mod.rs
crates/aci-adapters/src/languages/brace/: resolve.rs  scanner.rs
crates/aci-adapters/src/languages/c/: detect.rs  extract.rs  mod.rs
crates/aci-adapters/src/languages/c/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/cpp/: detect.rs  extract.rs  mod.rs  resolve.rs
crates/aci-adapters/src/languages/cpp/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/go/: detect.rs  extract.rs  mod.rs
crates/aci-adapters/src/languages/go/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/java/: detect.rs  extract.rs  mod.rs
crates/aci-adapters/src/languages/java/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/json/: detect.rs  extract.rs  mod.rs
crates/aci-adapters/src/languages/objective_c/: detect.rs  extract.rs  mod.rs
crates/aci-adapters/src/languages/objective_c/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/python/: detect.rs  extract.rs  mod.rs  resolve.rs
crates/aci-adapters/src/languages/python/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/rust/: detect.rs  extract.rs  mod.rs  resolve.rs
crates/aci-adapters/src/languages/rust/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-adapters/src/languages/typescript/: detect.rs  extract.rs  mod.rs  scanner.rs
crates/aci-adapters/src/languages/typescript/queries/: calls.scm  imports.scm  symbols.scm
crates/aci-cli/: Cargo.toml
crates/aci-cli/src/: args.rs  bench.rs  diff.rs  export.rs  index.rs  lib.rs  main.rs  output.rs  query.rs  watch.rs
crates/aci-core/: Cargo.toml
crates/aci-core/src/: diagnostics.rs  ids.rs  language.rs  lib.rs  model.rs  quality.rs  span.rs
crates/aci-diff/: Cargo.toml
crates/aci-diff/src/: agent.rs  compare.rs  git.rs  labels.rs  lib.rs  report.rs  stats.rs  symbol_identity.rs
crates/aci-diff/tests/: diff_refs.rs
crates/aci-export/: Cargo.toml
crates/aci-export/src/: lib.rs  tests.rs
crates/aci-indexer/: Cargo.toml
crates/aci-indexer/src/: discover.rs  incremental.rs  lib.rs  pipeline.rs  summary.rs  types.rs
crates/aci-query/: Cargo.toml
crates/aci-query/src/: lib.rs
crates/aci-store/: Cargo.toml
crates/aci-store/src/: compact.rs  dependencies.rs  graph.rs  integrity.rs  io.rs  lib.rs  load.rs  manifest.rs  pack.rs  shard_cache.rs  symbols.rs  tags.rs  tests.rs  types.rs  write.rs
crates/aci-watch/: Cargo.toml
crates/aci-watch/src/: lib.rs
docs/: adapter-authoring.md  architecture.md  deployment.md  diff.md  exports.md  graph-model.md  release-checklist.md  semantic-enrichment.md  storage.md  tree-sitter-production-plan.md  troubleshooting.md
scripts/: bench-cold-index.sh  bench-incremental-index.sh  bench-large-repo.sh  bench-memory.sh  bench-query-latency.sh  bench-real-repo.sh  bench-structural-variants.sh  check-loc.sh  validate-packaging.sh  validate-performance.sh
site/: docs.html  index.html  install.sh
site/docs/: index.html
