[workspace]
members = [
  "crates/aci-adapters",
  "crates/aci-cli",
  "crates/aci-core",
  "crates/aci-export",
  "crates/aci-indexer",
  "crates/aci-query",
  "crates/aci-store",
  "crates/aci-watch",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://example.invalid/aci"
rust-version = "1.88"

[workspace.dependencies]
aci-adapters = { path = "crates/aci-adapters" }
aci-core = { path = "crates/aci-core" }
aci-export = { path = "crates/aci-export" }
aci-indexer = { path = "crates/aci-indexer" }
aci-query = { path = "crates/aci-query" }
aci-store = { path = "crates/aci-store" }
aci-watch = { path = "crates/aci-watch" }
anyhow = "1.0"
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
notify = "8.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
tree-sitter = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-objc = "3.0"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
