[package]
name = "aci-adapters"
version = "0.1.0"
description = "Language detection and structural extraction adapters for ACI code graphs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["development-tools", "parser-implementations"]
keywords = ["code-index", "tree-sitter", "symbols"]

[lints]
workspace = true

[dependencies]
aci-core.workspace = true
serde_json.workspace = true
tree-sitter.workspace = true
tree-sitter-c.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-objc.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
