[package]
name = "aci-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "aci"
path = "src/main.rs"

[dependencies]
aci-export.workspace = true
aci-indexer.workspace = true
aci-query.workspace = true
aci-store.workspace = true
anyhow.workspace = true
clap.workspace = true
