[package]
name = "aci-cli"
version = "0.1.0"
description = "Command-line interface for indexing, querying, watching, benchmarking, and exporting ACI code graphs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["command-line-utilities", "development-tools"]
keywords = ["code-index", "symbols", "graph"]

[lints]
workspace = true

[[bin]]
name = "aci"
path = "src/main.rs"

[dependencies]
aci-adapters.workspace = true
aci-core.workspace = true
aci-export.workspace = true
aci-indexer.workspace = true
aci-query.workspace = true
aci-store.workspace = true
aci-watch.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
