[package]
name = "aci-core"
version = "0.1.0"
description = "Shared graph model, deterministic IDs, spans, diagnostics, and fact-quality types for ACI."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["development-tools"]
keywords = ["code-index", "graph", "symbols"]

[lints]
workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
