[package]
name = "aci-indexer"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aci-adapters.workspace = true
aci-core.workspace = true
blake3.workspace = true
ignore.workspace = true
rayon.workspace = true

[dev-dependencies]
tempfile.workspace = true
