[package]
name = "aci-query"
version = "0.1.0"
description = "Symbol lookup, dependency traversal, caller queries, and impact analysis over ACI graphs."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["development-tools"]
keywords = ["code-index", "query", "graph"]

[lints]
workspace = true

[dependencies]
aci-core.workspace = true
aci-store.workspace = true
