[package]
name = "aci-store"
version = "0.1.0"
description = "Packed graph partition storage, manifests, snapshots, and adjacency indexes for ACI."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories = ["development-tools", "database-implementations"]
keywords = ["code-index", "storage", "graph"]

[lints]
workspace = true

[dependencies]
aci-core.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
